--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,3 +29,6 @@ jobs:
 
     - name: Install dotnet lambda tools
       run: dotnet tool install -g Amazon.Lambda.Tools
+
+    - name: Build backend
+      run: sam --version
