--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,4 +31,4 @@ jobs:
       run: dotnet tool install -g Amazon.Lambda.Tools
 
     - name: Build backend
-      run: sam --version
+      run: sam build
