Updated stack name

--- a/samconfig.toml
+++ b/samconfig.toml
@@ -2,8 +2,8 @@ version = 0.1
 [default]
 [default.deploy]
 [default.deploy.parameters]
-stack_name = "dynamocode-email-send"
+stack_name = "dynamocode-email-sender"
 s3_bucket = "dynamocode-deployments"
-s3_prefix = "dynamocode-email-send"
+s3_prefix = "dynamocode-email-sender"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
